@@ -162,7 +162,8 @@ eptex_ch_synctex = \
 	synctexdir/synctex-p-rec.ch0 \
 	synctexdir/synctex-rec.ch0 \
 	synctexdir/synctex-rec.ch1 \
-	synctexdir/synctex-ep-rec.ch1 \
+	synctexdir/synctex-e-rec.ch0 \
+	synctexdir/synctex-e-rec.ch1 \
 	synctexdir/synctex-p-rec.ch1
 
 dist_eptex_SOURCES += \
@@ -177,8 +178,7 @@ endif EPTEX_SYNCTEX
 
 EXTRA_DIST += \
 	synctexdir/synctex-ep-mem.ch0 \
-	synctexdir/synctex-ep-mem.ch1 \
-	synctexdir/synctex-ep-rec.ch1
+	synctexdir/synctex-ep-mem.ch1
 
 ## SyncTeX infrastructure: pdfTeX
 
