@@ -1,16 +1,0 @@
-@x tex.web l.12378
-kern_node:cur_h:=cur_h+width(p);
-@y
-kern_node: begin
-  @<Record |kern_node| {\sl Sync\TeX} information@>;
-  cur_h:=cur_h+width(p);
-end;
-@z
-
-@x tex.web: Handle a math node in |hlist_out
-  cur_h:=cur_h+width(p);
-@y
-  @<Record |math_node| {\sl Sync\TeX} information@>;
-  cur_h:=cur_h+width(p);
-@z
-
